# invoice-reco

./: .gitignore  Dockerfile  README.md  compose.yaml  config.py  index.html  pyproject.toml  requirements.txt  script.js  test.py
invoice_reco/: db.py  models.py  routers.py
public/: index.html
src/: __init__.py  db.py  main.py  models.py  openai.py  routers.py
tests/: test_api.py
