[tool.poetry]
name = "invoice-reco"
version = "0.1.0"
description = ""
authors = ["LinaMezghani <lina.mezghani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
python-multipart = "^0.0.6"
pytest = "^7.4.4"
httpx = "^0.26.0"
requests = "^2.31.0"
pydantic-settings = "^2.1.0"
sqlmodel = "^0.0.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
